# togura

./: .gitignore  README.md  config.example.yml  config.py  generator.py  html.py  jalc.py  jpcoar.ipynb  jpcoar.json  jpcoar.py  jpcoar.yaml  migrate.py  pyproject.toml  requirements.txt  resourcesync.py  ro_crate.py  togura.py  validate_jpcoar_xml.py
.github/workflows/: pytest.yml  release.yml  static.yml
samples/: 01_departmental_bulletin_paper_oa.yaml  02_journal_article_embargoed.yaml  03_journal_article_oa.yaml  04_journal_article_accepted_embargoed.yaml  05_doctoral_thesis_oa.yaml  06_doctoral_thesis_published.yaml  07_dataset.yaml  08_conference_object.yaml  09_departmental_bulletin_paper_restricted_access.yaml  10_journal_article_metadata_only_external_link.yaml  11_dataset_external_link.yaml  12_digital_archive.yaml  13_digital_archive_dataset_series.yaml
samples/00_sample/: jpcoar20.yaml
samples/01_departmental_bulletin_paper_oa/: jpcoar20.yaml
samples/02_journal_article_embargoed/: jpcoar20.yaml
samples/03_journal_article_oa/: jpcoar20.yaml
samples/04_journal_article_accepted_embargoed/: jpcoar20.yaml
samples/05_doctoral_thesis_oa/: jpcoar20.yaml
samples/06_doctoral_thesis_published/: jpcoar20.yaml
samples/07_dataset/: jpcoar20.yaml
samples/08_conference_object/: jpcoar20.yaml
schema/: jpcoar.json  jpcoar.yaml
src/togura/: cli.py  (+7 more)
templates/: bootstrap.html  footer.j2  index.j2  index_page.j2  show.j2  style.css
test/: test_jpcoar.py
tests/: smoke_test.py  test_jalc.py  test_jpcoar.py
togura/: config.py  html.py  jalc.py  jpcoar.py
(+10 files in other folders)
