[project]
name = "togura"
version = "0.1.0"
description = "極めてシンプルな機関リポジトリ"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "more-itertools>=10.8.0",
    "pytest>=8.4.2",
    "pyyaml>=6.0",
    "resync>=2.0.1",
    "rocrate>=0.14.0",
    "setuptools>=80.9.0",
    "sickle>=0.7.0",
    "xmlschema>=4.1.0",
]
